package com.cap.admin.catalogo.domain;

public class Identifier extends ValueObject {
}
