package com.cap.admin.catalogo.domain;

public abstract class ValueObject{}