package com.cap.admin.catalogo.domain.validation;

public record Error(String message) {
}
