package com.cap.admin.catalogo.domain.validation;

import java.util.List;

public interface ValidationHandler {

    ValidationHandler append (Error anError);

    ValidationHandler append (ValidationHandler aHandler);

    ValidationHandler validate (Validation aValidation);
    
    List <Error> getErrors();

    default boolean hasError() {
        return getErrors() != null && !getErrors().isEmpty();
    }

    public interface Validation {
        void validate();        
    }
}
