@startuml Domain
package domain {
    class Identifier {
    }

    class ValueObject {
    }

    class AggregateRoot {
        + id: Identifier
        - validate(handler: ValidationHandler): void
    }

    class Entity {
        + id: Identifier
        - validate(handler: ValidationHandler): void
    }

    class ValidationHandler {
        + append(error: Error): ValidationHandler
        + append(handler: ValidationHandler): ValidationHandler
        + validate(validation: Validation): ValidationHandler
        + getErrors(): List<Error>
        + hasError(): boolean
    }

    class Validator {
        + validate(): void
    }

    class Error {
        + message: String
    }

    class DomainException {
        - errors: List<Error>
        + getErrors(): List<Error>
        + with(error: Error): DomainException
        + with(errors: List<Error>): DomainException
    }

    class Category {
        - name: String
        - description: String
        - isActive: boolean
        - createdAt: Instant
        - updatedAt: Instant
        - deletedAt: Instant
        + getId(): Identifier
        + getName(): String
        + getDescription(): String
        + getIsActive(): boolean
        + getCreatedAt(): Instant
        + getUpdatedAt(): Instant
        + getDeletedAt(): Instant
        + validate(handler: ValidationHandler): void
        + activate(): Category
        + deactivate(): Category
        + update(aName: String, aDescription: String, isActive: boolean): Category
    }

    class CategoryID {
        + value: String
    }

    class CategoryValidator {
        + validate(category: Category): void
    }

    class NoStacktraceException {
        + NoStacktraceException(message: String)
        + NoStacktraceException(message: String, cause: Throwable)
    }

    class ThrowsValidationHandler {
        + append(error: Error): ValidationHandler
        + append(handler: ValidationHandler): ValidationHandler
        + validate(validation: Validation): ValidationHandler
        + getErrors(): List<Error>
    }

    class CategorySearchQuery {
        + page: int
        + perPage: int
        + terms: String
        + sort: String
        + direction: String
    }

    class Pagination<T> {
        + currentPage: int
        + perPage: int
        + total: long
        + items: List<T>
    }

    class CategoryGateway {
        + create(aCategory: Category): Category
        + deleteById(anId: CategoryID): void
        + findById(anId: CategoryID): Optional<Category>
        + update(aCategory: Category): Category
        + findAll(aQuery: CategorySearchQuery): Pagination<Category>
    }

    Entity <|-- AggregateRoot
    AggregateRoot <|-- Category
    Identifier <|-- CategoryID
    ValidationHandler <|-- Validator
    ValueObject <|-- Identifier
    Validator <|-- CategoryValidator
    RuntimeException <|-- NoStacktraceException
    NoStacktraceException <|-- DomainException
    ValidationHandler <|.. ThrowsValidationHandler
    CategorySearchQuery <|.. CategoryGateway
    Pagination <|.. CategoryGateway
}
@enduml
